fixed the select spacing

--- a/client/src/components/inventory-components/CreateNewModal.scss
+++ b/client/src/components/inventory-components/CreateNewModal.scss
@@ -96,6 +96,7 @@
   select {
     width: 100%;
     height: 48px;
+    padding-left: 10px;
   }
   h5 {
     width: auto;
@@ -144,7 +145,7 @@
   .modal-content {
     width: 470px;
     margin-left: auto;
-    top: 25%;
+    top: 15%;
     margin-right: auto;
     border-radius: 4px;
     padding-left: 60px;
